--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,8 +30,8 @@ h6 {
   position: fixed;
   visibility: hidden;
   opacity: 0;
-
-
+  right: 15px;
+  bottom: 15px;
   z-index: 996;
   background: #149ddd;
   width: 40px;
@@ -117,9 +117,9 @@ h6 {
   text-decoration: none;
 }
 
-
-
-
+#main {
+  margin-left: 300px;
+}
 
 .container,
 .container-fluid {
@@ -185,7 +185,7 @@ h6 {
 .nav-menu .active:focus,
 .nav-menu li:hover>a {
   text-decoration: none;
-  color: changeme;
+  color: #fff;
 }
 
 .nav-menu a:hover i,
